Encrypted blob store repository - take I (#46170)
POC with GCM from BC