@@ -76,7 +76,6 @@ import java.security.PrivilegedAction;
 import java.time.Clock;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -313,7 +312,7 @@ public class XPackPlugin extends XPackClientPlugin implements ExtensiblePlugin, 
     @Override
     public Map<String, Repository.Factory> getRepositories(Environment env, NamedXContentRegistry namedXContentRegistry,
                                                            ThreadPool threadPool) {
-        return Collections.singletonMap("source", SourceOnlySnapshotRepository.newRepositoryFactory());
+        return Map.of("source", SourceOnlySnapshotRepository.newRepositoryFactory());
     }
 
     @Override
